--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .ShowList {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .FormContainer {
@@ -26,8 +26,10 @@
 
   height: 150px;
   width: 800px;
+  padding: 10px 5px;
 
-  border: 1px solid black;
+  border: 1px solid aliceblue;
+  border-radius: 10px;
 }
 
 .FormContainer label {
